<resources>
    <string name="app_name">ural</string>

    <string name="action_settings">Settings</string>
    <string name="action_font_size">Шрифт</string>
    <string name="action_item_2">item 2</string>
    <string name="action_item_3">item 3</string>


    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>

    <string name="drawer_item_chapters">Сегодня в журнале</string>
    <string name="drawer_item_options">Настройки</string>

    <string name="drawer_item_p1">Проза</string>
    <string name="drawer_item_p2">Поэзия</string>
    <string name="drawer_item_p3">Драматургия</string>
    <string name="drawer_item_p4">Без вымысла</string>
    <string name="drawer_item_p5">Краеведение</string>
    <string name="drawer_item_p6">Публицистика</string>
    <string name="drawer_item_p7">Критика и библиография</string>

    <string name="empty">Нет данных</string>
    <string name="title">Заголовок</string>
    <string name="author">Автор</string>
    <string name="fulltext">Очень много букв</string>


</resources>
