<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@android:drawable/ic_menu_search"
        yourapp:showAsAction="always|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_font_size"
        android:icon="@android:drawable/ic_menu_save"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_micro"
        android:title="@string/action_item_2"
        android:icon="@android:drawable/ic_menu_save"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove"
        android:title="@string/action_item_2"
        android:icon="@android:drawable/ic_menu_save"
        yourapp:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_item_3"
        android:icon="@android:drawable/ic_menu_save"
        yourapp:showAsAction="ifRoom" />
</menu>